@@ -6,20 +6,26 @@
   end
 -%>
 HOSTS:
-  el6:
+  el8:
     roles:
       - server
       - default
       - master
       - client
-    platform: el-6-x86_64
-    box: centos/6
+    platform: el-8-x86_64
+    box: centos/8
     hypervisor: <%= hypervisor %>
   el7:
     roles:
       - client
     platform: el-7-x86_64
     box: centos/7
+    hypervisor: <%= hypervisor %>
+  el6:
+    roles:
+      - client
+    platform: el-6-x86_64
+    box: centos/6
     hypervisor: <%= hypervisor %>
 
 CONFIG:
